force-app/main/default/objects/Speaker__c/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <description>about me section for speaker.</description>
    <inlineHelpText>about me section for speaker</inlineHelpText>
    <label>About Me</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>