force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>company of the speaker</description>
    <inlineHelpText>enter company of the speaker</inlineHelpText>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>