force-app/main/default/objects/Speaker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the speaker</description>
    <inlineHelpText>enter the email of the speaker</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>