force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>phone number of the speaker</description>
    <inlineHelpText>enter the phone number of the speaker</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>