force-app/main/default/objects/Speaker__c/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <description>profile URL for the speaker</description>
    <inlineHelpText>URL for profile of the speaker</inlineHelpText>
    <label>Profile URL</label>
    <type>Url</type>
</CustomField>